fixed the horizitonal scrollbar

--- a/spoker-react/src/pages/pockerRoom/components/pockerBoard.css
+++ b/spoker-react/src/pages/pockerRoom/components/pockerBoard.css
@@ -3,7 +3,7 @@
   background:#ffffff;
 }
 .footer {
-  position:absolute;bottom:100px;width:100%;height:100px;
+  position:absolute;bottom:100px;height:100px;
   background:#ffffff;
 }
 .titile {
@@ -26,7 +26,7 @@
   padding-top: 15px;
   font-size: 11px;
 }
-.storySwitcherControls{
+.storySwitcherControls {
   margin: 0 20px 20px 20px;
 }
 
